--- a/.procmailrc
+++ b/.procmailrc
@@ -1,9 +1,5 @@
 #MAILDIR=$HOME/Maildir/
 
-#:0:
-#* ^Subject:.*\[rails-oceania\]
-#$HOME/Maildir/.general.newsletters.ror_au/
-
 :0:
 * ^To:.*haml@
 $HOME/Maildir/.general.newsletters.haml/
@@ -23,6 +19,10 @@ $HOME/Maildir/.general.newsletters.webkit/
 $HOME/Maildir/.general.newsletters.ror_au/
 
 :0:
+* ^List-Id:.*emacs-on-rails.
+$HOME/Maildir/.general.newsletters.rails-on-emacs/
+
+:0:
 * ^To:.*rails-business@
 $HOME/Maildir/.general.newsletters.rails-biz/
 
@@ -32,5 +32,5 @@ $HOME/Maildir/.general.newsletters.ror_au/
 
 :0:
 * 1^0 ^From: .*winny.shum@
-* 1^0 ^From: .*wshu????@
+* 1^0 ^From: .*wshu....@
 $HOME/Maildir/.general/
