--- a/.procmailrc
+++ b/.procmailrc
@@ -1,36 +1,44 @@
-#MAILDIR=$HOME/Maildir/
-
-:0:
-* ^To:.*haml@
-$HOME/Maildir/.general.newsletters.haml/
-
-:0:
-* 1^0 ^To:.*macruby-devel@
-* 1^0 ^Cc: *macruby-devel@
-$HOME/Maildir/.general.newsletters.macruby/
 
 :0:
 * 1^0 ^To:.*webkitsdk-dev@
-* 1^0 ^List-Id:.*webkitsdk-dev@
-$HOME/Maildir/.general.newsletters.webkit/
+* 1^0 ^List-Id:.*webkitsdk@
+$HOME/Maildir/.lists.webkit/
 
 :0:
-* ^To:.*rails-oceania@
-$HOME/Maildir/.general.newsletters.ror_au/
+* ^List-Id:.*commit\.clockingit\.com
+$HOME/Maildir/.lists.clockingit.commit/
 
 :0:
-* ^List-Id:.*emacs-on-rails.
-$HOME/Maildir/.general.newsletters.rails-on-emacs/
+* ^List-Id:.*dev\.clockingit\.com
+$HOME/Maildir/.lists.clockingit/
 
-:0:
-* ^To:.*rails-business@
-$HOME/Maildir/.general.newsletters.rails-biz/
-
-:0:
-* ^To:.*Sydney-Ruby-Users@
-$HOME/Maildir/.general.newsletters.ror_au/
 
 :0:
 * 1^0 ^From: .*winny.shum@
 * 1^0 ^From: .*wshu....@
 $HOME/Maildir/.general/
+
+
+# From http://bethesignal.org/dotfiles/procmailrc.html
+# ARTFUL PROCMAIL ALERT!
+# Here are two rules that will automagically filter *most* list emails based on
+# sane matches, such as list id. Very funky, and you almost never have to deal
+# with folder-making for lists again.
+# MOST LISTS - Automagically handle lists
+:0
+* ^((List-Id|X-(Mailing-)?List):(.*[<]\/[^>]*))
+{
+    LISTID=$MATCH
+
+    :0
+    * LISTID ?? ^\/[^@\.]*
+    $HOME/Maildir/.lists.$MATCH/
+}
+# MAJORDOMO - Automagically handle Majordomo lists
+:0
+* ^Sender: owner-[^@]+@[^@\+]+
+* ^Sender: owner-\/[^@\+]+
+{
+    :0:
+    $HOME/Maildir/.lists.$MATCH/
+}
