--- a/.conkerorrc
+++ b/.conkerorrc
@@ -1,14 +1,15 @@
-//require("tab-bar.js"); // For the old classic tabs.
 require("new-tabs.js"); // For the new tabs
-require("/Users/brad/.conkeror.d/function.js")
+
+require("/Users/brad/.conkeror.d/functions.js");
+require("/Users/brad/.conkeror.d/webjumps.js");
 register_user_stylesheet("file:///Users/brad/.conkeror.d/conkeror.css");
 
 // use history for complete helpers
 url_completion_use_bookmarks = false;
 url_completion_use_history = true;
 
+// bah homepage
 homepage = "about:blank";
-
 
 // middle click opens in new buffer
 require("clicks-in-new-buffer.js");
@@ -24,17 +25,6 @@ define_key(content_buffer_normal_keymap, "M-=", "zoom-in-text");
 // follow links in new buffer
 define_key(content_buffer_normal_keymap, "d", "follow-new-buffer-background");
 
-// eval key
-
-// switch to buffers 1-10 using keys
-function define_key_buffer_switch(key, buf_num) {
-    define_key(content_buffer_normal_keymap, key, function (I) {
-            switch_to_buffer(I.window, I.window.buffers.get_buffer(buf_num));
-        });
-}
-for (let i = 0; i < 10; ++i)
-    define_key_buffer_switch(i == 9 ? "0" : (i+1).toString(), i);
-
 // download management
 download_buffer_automatic_open_target =  OPEN_NEW_BUFFER_BACKGROUND;
 
@@ -46,6 +36,7 @@ session_pref("signon.SignonFileName", "signons.txt");
 Components.classes["@mozilla.org/login-manager;1"]
     .getService(Components.interfaces.nsILoginManager);
 
+
 /* 
  * Temporary work-around for cwd bug 
  */ 
@@ -55,21 +46,5 @@ add_hook("create_buffer_hook",
              buf.configuration.cwd = null; 
          });
 
-
-// Change tabs bars to vertical
-function vertical_tab_bars(window) {
-    var tabBar = window.tab_bar.element;
-    var container = window.buffers.container;
-    var target = container.parentNode;
-    
-    var hbox = create_XUL(window, "hbox");
-    hbox.setAttribute("flex", "1");
-    target.insertBefore(hbox, container);
-
-    tabBar.parentNode.removeChild(tabBar);
-    hbox.appendChild(tabBar);
-    hbox.appendChild(container);
-    window.tab_bar.element.setAttribute("orient", "vertical");
-}
-add_hook("window_initialize_hook", vertical_tab_bars);
+//add_hook("buffer_loaded_hook", fill_form_values);
 
