--- a/.conkerorrc
+++ b/.conkerorrc
@@ -24,6 +24,12 @@ define_key(content_buffer_normal_keymap, "M-=", "zoom-in-text");
 
 // follow links in new buffer
 define_key(content_buffer_normal_keymap, "d", "follow-new-buffer-background");
+define_key(content_buffer_normal_keymap, "h", "go-home");
+
+define_key(content_buffer_normal_keymap, "M-c", "cmd_copy");
+define_key(content_buffer_normal_keymap, "M-a", "cmd_selectAll");
+define_key(content_buffer_normal_keymap, "M-q", "quit");
+
 
 // download management
 download_buffer_automatic_open_target =  OPEN_NEW_BUFFER_BACKGROUND;
