--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".site-lisp/smex"]
 	path = .site-lisp/smex
 	url = git://github.com/nonsequitur/smex.git
+[submodule ".site-lisp/magit"]
+	path = .site-lisp/magit
+	url = git://github.com/jwiegley/magit.git
