--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule ".site-lisp/magit"]
 	path = .site-lisp/magit
 	url = git://github.com/jwiegley/magit.git
+[submodule ".site-lisp/php-mode"]
+	path = .site-lisp/php-mode
+	url = git://github.com/ieure/php-mode-el.git
