--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule ".site-lisp/cucumber.el"]
 	path = .site-lisp/cucumber.el
 	url = http://github.com/michaelklishin/cucumber.el.git
+[submodule ".site-lisp/rspec-mode"]
+	path = .site-lisp/rspec-mode
+	url = http://github.com/pezra/rspec-mode.git
