--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".site-lisp/rspec-mode"]
 	path = .site-lisp/rspec-mode
 	url = http://github.com/pezra/rspec-mode.git
+[submodule ".site-lisp/rvm"]
+	path = .site-lisp/rvm
+	url = http://github.com/senny/rvm.el.git
