--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule ".site-lisp/rvm"]
 	path = .site-lisp/rvm
 	url = http://github.com/senny/rvm.el.git
+[submodule ".site-lisp/coffee-mode"]
+	path = .site-lisp/coffee-mode
+	url = git://github.com/defunkt/coffee-mode.git
