--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule ".site-lisp/solarized"]
 	path = .site-lisp/solarized
 	url = https://github.com/purcell/color-theme-sanityinc-solarized.git
+[submodule ".site-lisp/rainbow-delimiters"]
+	path = .site-lisp/rainbow-delimiters
+	url = https://github.com/jlr/rainbow-delimiters.git
