--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,9 @@
 [submodule ".site-lisp/mo-git-blame"]
 	path = .site-lisp/mo-git-blame
 	url = https://github.com/mbunkus/mo-git-blame.git
+[submodule ".site-lisp/browse-kill-ring-plus"]
+	path = .site-lisp/browse-kill-ring-plus
+	url = https://github.com/emacsmirror/browse-kill-ring-plus.git
+[submodule ".site-lisp/browse-kill-ring"]
+	path = .site-lisp/browse-kill-ring
+	url = https://github.com/emacsmirror/browse-kill-ring.git
