add some useful git aliases

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,9 @@
 	email = brad@lucky-dip.net
 [alias]
 	co = checkout
+	cb = rev-parse --symbolic-full-name --abbrev-ref HEAD
+	gp = !git push --set-upstream origin HEAD:$(git cb)
+	gup = !git fetch --prune origin && git rebase -p origin/$(git cb)
 [apply]
 	whitespace = nowarn
 	
